--- a/example.env
+++ b/example.env
@@ -4,7 +4,7 @@ NODE_ENV=production
 # Database Postgres
 # DATABASE_URL=
 # DATABASE_URL=
-DATABASE_URL=
+DATABASE_URL=postgresql://postgres:memo@postgres-db-game:5432/game
 # DATABASE_URL=
 
 # testing swagger token
@@ -26,4 +26,3 @@ FRONT_URL=
 BASE_URL=
 BASE_URL_DEV=
 BASE_URL_TEST=
-
