--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/luxon": "^3.4.2",
+    "@types/mime-types": "^2.1.4",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
