--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: rakez
+    runs-on: rakez # or use 'self-hosted' if you're using your own server
 
     strategy:
       matrix:
@@ -35,28 +35,6 @@ jobs:
           touch .env
           echo "${{ secrets.RAKEZENV }}" > .env
 
-      - name: Start Docker containers
-        run: docker compose up --build -d
-
-      - name: Wait for services to be ready
+      - name: Build and start containers (without stopping others)
         run: |
-          echo "Waiting for services to initialize..."
-          sleep 20
-          docker compose ps
-
-      - name: Backup PostgreSQL before migration
-        run: |
-          mkdir -p db_backups
-          docker exec postgres-db-game pg_dump -U postgres -d game > db_backups/backup.sql
-
-      - name: Upload DB backup artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: postgres-backup
-          path: db_backups/backup.sql
-
-      - name: Run Prisma migrations
-        run: docker compose exec -T app npx prisma migrate deploy
-
-      - name: Stop containers
-        run: docker compose down
+          docker compose up --build -d
