--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -34,6 +34,9 @@ jobs:
         run: |
           touch .env
           echo "${{ secrets.RAKEZENV }}" > .env
+      - name: Remove old app container (only if exists)
+        run: |
+            docker rm -f nest-app-game || true
 
       - name: Install dependencies via Docker Compose
         run: docker compose up --build -d
