--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -44,4 +44,4 @@ jobs:
           docker rm -f nest-app-game || true
 
       - name: Build and start containers
-        run: docker compose up --build -d --remove-orphans
+        run: docker compose up --build -d 
