--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -35,13 +35,5 @@ jobs:
           touch .env
           echo "${{ secrets.RAKEZENV }}" > .env
 
-      - name: Cleanup previous Docker containers
-        run: |
-          # Stop and remove containers defined in docker-compose.yml
-          docker compose down --remove-orphans || true
-          
-          # Force remove lingering container if still exists
-          docker rm -f nest-app-game || true
-
-      - name: Build and start containers
-        run: docker compose up --build -d 
+      - name: Install dependencies via Docker Compose
+        run: docker compose up --build -d
