--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: faker
+    runs-on: rakez  # ✅ Fixed runner
 
     strategy:
       matrix:
@@ -17,12 +17,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          clean: false
-
-      - name: Set environment variables
-        run: echo "HOME=/root" >> $GITHUB_ENV
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
@@ -31,9 +25,9 @@ jobs:
           cache: 'npm'
 
       - name: Create .env file
-        run: |
-          touch .env
-          echo "${{ secrets.RAKEZENV }}" > .env
+        env:
+          RAKEZENV: ${{ secrets.RAKEZENV }}
+        run: echo "$RAKEZENV" > .env  # ✅ Better secret handling
 
       - name: Install dependencies via Docker Compose
-        run: docker compose up --build -d
+        run: docker compose up --build --exit-code-from app  # ✅ Exit on failure
