--- a/example.env
+++ b/example.env
@@ -1,6 +1,8 @@
 NODE_ENV=production
 #------------------#
-
+DB_USER= ali
+DB_PASSWORD=osbash
+DB_NAME=game
 # Database Postgres
 # DATABASE_URL=
 # DATABASE_URL=
