--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
-services:
+version: '3.8'
 
+services:
   app:
     build:
       context: .
@@ -7,25 +8,39 @@ services:
     container_name: nest-app-game
     environment:
       - NODE_OPTIONS=--max-old-space-size=2048
+      - DB_HOST=db
+      - DB_PORT=5432
     ports:
-      - "3101:4444" # Map container's port 3000 to your machine
+      - "3101:4444"
     depends_on:
-      - db # Wait for the db service to be ready before starting the app
+      db:
+        condition: service_healthy
     volumes:
-      - uploads_data:/app/uploads # Mount the local app directory to the container's /app directory
-  #
+      - uploads_data:/app/uploads
+    networks:
+      - app-network
+
   db:
-    image: postgres:17.2 # Use PostgreSQL v17.2
+    image: postgres:16.2-alpine  # ✅ Use valid version
     container_name: postgres-db-game
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: memo
-      POSTGRES_DB: game
-    ports:
-      - "5440:5432" # Map container's port 5432 to your machine
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME:-game}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-game}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     volumes:
-      - postgres_data:/var/lib/postgresql/data # Persist database data
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
   uploads_data:
+
+networks:
+  app-network:
+    driver: bridge
