--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,9 @@ services:
     image: postgres:17.2   # ✅ Use valid version
     container_name: postgres-db-game
     environment:
-      POSTGRES_USER: ${DB_USER:-postgres}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME:-game}
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: memo
+      POSTGRES_DB: game
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-game}"]
       interval: 5s
