--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,11 @@ services:
     image: postgres:17.2   # ✅ Use valid version
     container_name: postgres-db-game
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: memo
-      POSTGRES_DB: game
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME:-game}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-game}"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d game"]
       interval: 5s
       timeout: 5s
       retries: 5
