--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,9 @@ services:
     image: postgres:17.2   # ✅ Use valid version
     container_name: postgres-db-game
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: rakez
-      POSTGRES_DB: game
+       POSTGRES_USER: postgres
+       POSTGRES_PASSWORD: memo
+       POSTGRES_DB: game
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d game"]
       interval: 5s
