--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,11 @@ services:
     image: postgres:17.2   # ✅ Use valid version
     container_name: postgres-db-game
     environment:
-       POSTGRES_USER: postgres
-       POSTGRES_PASSWORD: memo
+       POSTGRES_USER: rakez
+       POSTGRES_PASSWORD: Rakez@Osbash2025
        POSTGRES_DB: game
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d game"]
+      test: ["CMD-SHELL", "pg_isready -U rakez -d game"]
       interval: 5s
       timeout: 5s
       retries: 5
