--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -36,4 +36,4 @@ jobs:
           echo "${{ secrets.RAKEZENV }}" > .env
    
       - name: Install dependencies via Docker Compose
-        run: sudo docker compose up --build -d
+        run:  docker compose up --build -d
